parser/parser.output
Terminals unused in grammar

   TINVALID
   TAT
   TASOPTION


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt
    3      | stmts TEND stmt

    4 stmt: %empty
    5     | var_decl
    6     | func_decl
    7     | interface_decl
    8     | expr
    9     | TCCODE
   10     | TINCLUDE TSTRING
   11     | error

   12 block: TLBRACE stmts TRBRACE
   13      | TCCODE

   14 var_decl: assign
   15         | var TPLUSPLUS
   16         | var TMINUSMINUS
   17         | var TPLUSEQUAL expr_and
   18         | var TMINUSEQUAL expr_and
   19         | var TMULEQUAL expr_and
   20         | var TDIVEQUAL expr_and
   21         | var TLBRACKET expr TRBRACKET
   22         | var TLBRACKET expr TRBRACKET TEQUAL stmt

   23 func_decl: func_type_name func_block block catch destroy
   24          | func_type_name implement func_block block catch destroy
   25          | func_type_name func_block return_type_quote block catch destroy
   26          | func_type_name implement func_block return_type_quote block catch destroy

   27 func_type_name: TIDENTIFIER
   28               | TIDENTIFIER temp_block

   29 catch: %empty
   30      | TCATCH block

   31 destroy: %empty
   32        | TDESTROY block

   33 func_block: TLPAREN func_args TRPAREN

   34 func_args: func_arg
   35          | func_args TEND func_arg
   36          | func_args TCOMMA func_arg

   37 func_arg: %empty
   38         | interface_decl
   39         | assign
   40         | func_decl
   41         | expr

   42 implement: implement_args

   43 implement_args: implement_arg
   44               | implement_args implement_arg

   45 implement_arg: THASH arg_type_interface temp_block_optional

   46 interface_decl: THASH TIDENTIFIER temp_block_optional interface_block

   47 interface_block: TLPAREN interface_args TRPAREN

   48 interface_args: interface_arg
   49               | interface_args TEND interface_arg
   50               | interface_args TCOMMA interface_arg

   51 interface_arg: %empty
   52              | func_type_name func_block return_type_quote

   53 expr: if_expr
   54     | for_expr
   55     | while_expr
   56     | expr_and
   57     | array
   58     | TTHROW TLPAREN expr TRPAREN
   59     | TVOID

   60 expr_and: expr_comp TAND expr_and
   61         | expr_comp TOR expr_and
   62         | expr_comp

   63 expr_and_inner: expr_comp TAND expr_and
   64               | expr_comp TOR expr_and
   65               | tuple
   66               | expr_comp

   67 expr_comp: expr_math TCEQ expr_math
   68          | expr_math TCNE expr_math
   69          | expr_math TCPEQ expr_math
   70          | expr_math TCPNE expr_math
   71          | expr_math TCLT expr_math
   72          | expr_math TCLE expr_math
   73          | expr_math TCGT expr_math
   74          | expr_math TCGE expr_math
   75          | expr_math

   76 expr_math: expr_math TPLUS expr_math
   77          | expr_math TMINUS expr_math
   78          | expr_math TMUL expr_math
   79          | expr_math TDIV expr_math
   80          | expr_math TMOD expr_math
   81          | expr_math TQUESTIONCOLON expr_math
   82          | TEXCLAIM expr_var
   83          | expr_var TAS arg_type
   84          | expr_var

   85 expr_var: TLPAREN expr_and_inner TRPAREN
   86         | var
   87         | const

   88 for_expr: TFOR TIDENTIFIER TLPAREN expr TTO expr TRPAREN block

   89 while_expr: TWHILE expr block

   90 if_expr: TIF expr block
   91        | TIF expr block TELSE block
   92        | TIF expr block TELSE if_expr

   93 var: var TDOT var_right
   94    | var TQUESTIONDOT var_right
   95    | var_right

   96 var_right: func_type_name func_block
   97          | TISEMPTY TLPAREN expr TRPAREN
   98          | TGETVALUE TLPAREN expr TRPAREN
   99          | TVALUE TLPAREN expr TRPAREN
  100          | TIDENTIFIER
  101          | TTHIS

  102 const: TMINUS TINTEGER
  103      | TINTEGER
  104      | TMINUS TDOUBLE
  105      | TDOUBLE
  106      | TTRUE
  107      | TFALSE
  108      | TSTRING
  109      | TCHAR
  110      | TEMPTY arg_type_quote

  111 assign: TIDENTIFIER assign_type stmt
  112       | TIDENTIFIER assign_type arg_type_quote
  113       | TIDENTIFIER arg_type_quote assign_type stmt
  114       | var TDOT TIDENTIFIER assign_type stmt
  115       | var TDOT TIDENTIFIER assign_type arg_type_quote
  116       | var TDOT TIDENTIFIER arg_type_quote assign_type stmt
  117       | TLPAREN assign_tuple TRPAREN expr_and

  118 assign_tuple: assign_tuple_arg
  119             | assign_tuple TCOMMA assign_tuple_arg

  120 assign_tuple_arg: TIDENTIFIER assign_type
  121                 | TIDENTIFIER assign_type arg_type_quote
  122                 | var TDOT TIDENTIFIER assign_type

  123 assign_type: TEQUAL
  124            | TCOLON

  125 tuple: tuple_args TCOMMA expr_comp

  126 tuple_args: expr_comp
  127           | tuple_args TCOMMA expr_comp

  128 array: TLBRACKET array_args TRBRACKET

  129 array_args: expr
  130           | array_args TCOMMA expr

  131 return_type_quote: TQUOTE return_type

  132 arg_type_quote: TQUOTE arg_type

  133 arg_type: TIDENTIFIER temp_option_optional
  134         | THASH arg_type_interface temp_option_optional
  135         | func_type

  136 arg_type_interface: TIDENTIFIER
  137                   | TIDENTIFIER TDOT arg_type_interface

  138 return_type: arg_type
  139            | TVOID

  140 func_type: TLPAREN func_arg_type_list TRPAREN return_type

  141 func_arg_type: TEQUAL arg_type
  142              | TCOLON arg_type

  143 func_arg_type_list: %empty
  144                   | func_arg_type
  145                   | func_arg_type_list TCOMMA func_arg_type

  146 temp_block_optional: %empty
  147                    | temp_block

  148 temp_option_optional: %empty
  149                     | TQUESTION
  150                     | temp_block
  151                     | TQUESTION temp_block

  152 temp_block: TEXCLAIM arg_type
  153           | TEXCLAIM TLBRACKET temp_args TRBRACKET

  154 temp_args: arg_type
  155          | temp_args TCOMMA arg_type


Terminals, with rules where they appear

$end (0) 0
error (256) 11
TIDENTIFIER (258) 27 28 46 88 100 111 112 113 114 115 116 120 121 122
    133 136 137
TINTEGER (259) 102 103
TDOUBLE (260) 104 105
TINVALID (261)
TSTRING (262) 10 108
TCHAR (263) 109
TCCODE (264) 9 13
TCEQ (265) 67
TCNE (266) 68
TCLT (267) 71
TCLE (268) 72
TCGT (269) 73
TCGE (270) 74
TEQUAL (271) 22 123 141
TEND (272) 3 35 49
TLPAREN (273) 33 47 58 85 88 97 98 99 117 140
TRPAREN (274) 33 47 58 85 88 97 98 99 117 140
TLBRACE (275) 12
TRBRACE (276) 12
TCOMMA (277) 36 50 119 125 127 130 145 155
TCOLON (278) 124 142
TQUOTE (279) 131 132
TPLUS (280) 76
TMINUS (281) 77 102 104
TMUL (282) 78
TDIV (283) 79
TTRUE (284) 106
TFALSE (285) 107
TAS (286) 83
TVOID (287) 59 139
TIF (288) 90 91 92
TELSE (289) 91 92
TTHROW (290) 58
TCATCH (291) 30
TFOR (292) 88
TTO (293) 88
TWHILE (294) 89
TPLUSPLUS (295) 15
TMINUSMINUS (296) 16
TPLUSEQUAL (297) 17
TMINUSEQUAL (298) 18
TLBRACKET (299) 21 22 128 153
TRBRACKET (300) 21 22 128 153
TEXCLAIM (301) 82 152 153
TDOT (302) 93 114 115 116 122 137
TTHIS (303) 101
TINCLUDE (304) 10
TAND (305) 60 63
TOR (306) 61 64
TDESTROY (307) 32
TMOD (308) 80
THASH (309) 45 46 134
TAT (310)
TCPEQ (311) 69
TCPNE (312) 70
TMULEQUAL (313) 19
TDIVEQUAL (314) 20
TISEMPTY (315) 97
TGETVALUE (316) 98
TASOPTION (317)
TQUESTION (318) 149 151
TEMPTY (319) 110
TVALUE (320) 99
TQUESTIONCOLON (321) 81
TQUESTIONDOT (322) 94


Nonterminals, with rules where they appear

$accept (68)
    on left: 0
program (69)
    on left: 1, on right: 0
stmts (70)
    on left: 2 3, on right: 1 3 12
stmt (71)
    on left: 4 5 6 7 8 9 10 11, on right: 2 3 22 111 113 114 116
block (72)
    on left: 12 13, on right: 23 24 25 26 30 32 88 89 90 91 92
var_decl (73)
    on left: 14 15 16 17 18 19 20 21 22, on right: 5
func_decl (74)
    on left: 23 24 25 26, on right: 6 40
func_type_name (75)
    on left: 27 28, on right: 23 24 25 26 52 96
catch (76)
    on left: 29 30, on right: 23 24 25 26
destroy (77)
    on left: 31 32, on right: 23 24 25 26
func_block (78)
    on left: 33, on right: 23 24 25 26 52 96
func_args (79)
    on left: 34 35 36, on right: 33 35 36
func_arg (80)
    on left: 37 38 39 40 41, on right: 34 35 36
implement (81)
    on left: 42, on right: 24 26
implement_args (82)
    on left: 43 44, on right: 42 44
implement_arg (83)
    on left: 45, on right: 43 44
interface_decl (84)
    on left: 46, on right: 7 38
interface_block (85)
    on left: 47, on right: 46
interface_args (86)
    on left: 48 49 50, on right: 47 49 50
interface_arg (87)
    on left: 51 52, on right: 48 49 50
expr (88)
    on left: 53 54 55 56 57 58 59, on right: 8 21 22 41 58 88 89 90
    91 92 97 98 99 129 130
expr_and (89)
    on left: 60 61 62, on right: 17 18 19 20 56 60 61 63 64 117
expr_and_inner (90)
    on left: 63 64 65 66, on right: 85
expr_comp (91)
    on left: 67 68 69 70 71 72 73 74 75, on right: 60 61 62 63 64 66
    125 126 127
expr_math (92)
    on left: 76 77 78 79 80 81 82 83 84, on right: 67 68 69 70 71 72
    73 74 75 76 77 78 79 80 81
expr_var (93)
    on left: 85 86 87, on right: 82 83 84
for_expr (94)
    on left: 88, on right: 54
while_expr (95)
    on left: 89, on right: 55
if_expr (96)
    on left: 90 91 92, on right: 53 92
var (97)
    on left: 93 94 95, on right: 15 16 17 18 19 20 21 22 86 93 94 114
    115 116 122
var_right (98)
    on left: 96 97 98 99 100 101, on right: 93 94 95
const (99)
    on left: 102 103 104 105 106 107 108 109 110, on right: 87
assign (100)
    on left: 111 112 113 114 115 116 117, on right: 14 39
assign_tuple (101)
    on left: 118 119, on right: 117 119
assign_tuple_arg (102)
    on left: 120 121 122, on right: 118 119
assign_type (103)
    on left: 123 124, on right: 111 112 113 114 115 116 120 121 122
tuple (104)
    on left: 125, on right: 65
tuple_args (105)
    on left: 126 127, on right: 125 127
array (106)
    on left: 128, on right: 57
array_args (107)
    on left: 129 130, on right: 128 130
return_type_quote (108)
    on left: 131, on right: 25 26 52
arg_type_quote (109)
    on left: 132, on right: 110 112 113 115 116 121
arg_type (110)
    on left: 133 134 135, on right: 83 132 138 141 142 152 154 155
arg_type_interface (111)
    on left: 136 137, on right: 45 134 137
return_type (112)
    on left: 138 139, on right: 131 140
func_type (113)
    on left: 140, on right: 135
func_arg_type (114)
    on left: 141 142, on right: 144 145
func_arg_type_list (115)
    on left: 143 144 145, on right: 140 145
temp_block_optional (116)
    on left: 146 147, on right: 45 46
temp_option_optional (117)
    on left: 148 149 150 151, on right: 133 134
temp_block (118)
    on left: 152 153, on right: 28 147 150 151
temp_args (119)
    on left: 154 155, on right: 153 155


State 0

    0 $accept: . program $end

    error        shift, and go to state 1
    TIDENTIFIER  shift, and go to state 2
    TINTEGER     shift, and go to state 3
    TDOUBLE      shift, and go to state 4
    TSTRING      shift, and go to state 5
    TCHAR        shift, and go to state 6
    TCCODE       shift, and go to state 7
    TLPAREN      shift, and go to state 8
    TMINUS       shift, and go to state 9
    TTRUE        shift, and go to state 10
    TFALSE       shift, and go to state 11
    TVOID        shift, and go to state 12
    TIF          shift, and go to state 13
    TTHROW       shift, and go to state 14
    TFOR         shift, and go to state 15
    TWHILE       shift, and go to state 16
    TLBRACKET    shift, and go to state 17
    TEXCLAIM     shift, and go to state 18
    TTHIS        shift, and go to state 19
    TINCLUDE     shift, and go to state 20
    THASH        shift, and go to state 21
    TISEMPTY     shift, and go to state 22
    TGETVALUE    shift, and go to state 23
    TEMPTY       shift, and go to state 24
    TVALUE       shift, and go to state 25

    $end  reduce using rule 4 (stmt)
    TEND  reduce using rule 4 (stmt)

    program         go to state 26
    stmts           go to state 27
    stmt            go to state 28
    var_decl        go to state 29
    func_decl       go to state 30
    func_type_name  go to state 31
    interface_decl  go to state 32
    expr            go to state 33
    expr_and        go to state 34
    expr_comp       go to state 35
    expr_math       go to state 36
    expr_var        go to state 37
    for_expr        go to state 38
    while_expr      go to state 39
    if_expr         go to state 40
    var             go to state 41
    var_right       go to state 42
    const           go to state 43
    assign          go to state 44
    array           go to state 45


State 1

   11 stmt: error .

    $default  reduce using rule 11 (stmt)


State 2

   27 func_type_name: TIDENTIFIER .
   28               | TIDENTIFIER . temp_block
  100 var_right: TIDENTIFIER .
  111 assign: TIDENTIFIER . assign_type stmt
  112       | TIDENTIFIER . assign_type arg_type_quote
  113       | TIDENTIFIER . arg_type_quote assign_type stmt

    TEQUAL    shift, and go to state 46
    TCOLON    shift, and go to state 47
    TQUOTE    shift, and go to state 48
    TEXCLAIM  shift, and go to state 49

    TLPAREN   reduce using rule 27 (func_type_name)
    THASH     reduce using rule 27 (func_type_name)
    $default  reduce using rule 100 (var_right)

    assign_type     go to state 50
    arg_type_quote  go to state 51
    temp_block      go to state 52


State 3

  103 const: TINTEGER .

    $default  reduce using rule 103 (const)


State 4

  105 const: TDOUBLE .

    $default  reduce using rule 105 (const)


State 5

  108 const: TSTRING .

    $default  reduce using rule 108 (const)


State 6

  109 const: TCHAR .

    $default  reduce using rule 109 (const)


State 7

    9 stmt: TCCODE .

    $default  reduce using rule 9 (stmt)


State 8

   85 expr_var: TLPAREN . expr_and_inner TRPAREN
  117 assign: TLPAREN . assign_tuple TRPAREN expr_and

    TIDENTIFIER  shift, and go to state 53
    TINTEGER     shift, and go to state 3
    TDOUBLE      shift, and go to state 4
    TSTRING      shift, and go to state 5
    TCHAR        shift, and go to state 6
    TLPAREN      shift, and go to state 54
    TMINUS       shift, and go to state 9
    TTRUE        shift, and go to state 10
    TFALSE       shift, and go to state 11
    TEXCLAIM     shift, and go to state 18
    TTHIS        shift, and go to state 19
    TISEMPTY     shift, and go to state 22
    TGETVALUE    shift, and go to state 23
    TEMPTY       shift, and go to state 24
    TVALUE       shift, and go to state 25

    func_type_name    go to state 55
    expr_and_inner    go to state 56
    expr_comp         go to state 57
    expr_math         go to state 36
    expr_var          go to state 37
    var               go to state 58
    var_right         go to state 42
    const             go to state 43
    assign_tuple      go to state 59
    assign_tuple_arg  go to state 60
    tuple             go to state 61
    tuple_args        go to state 62


State 9

  102 const: TMINUS . TINTEGER
  104      | TMINUS . TDOUBLE

    TINTEGER  shift, and go to state 63
    TDOUBLE   shift, and go to state 64


State 10

  106 const: TTRUE .

    $default  reduce using rule 106 (const)


State 11

  107 const: TFALSE .

    $default  reduce using rule 107 (const)


State 12

   59 expr: TVOID .

    $default  reduce using rule 59 (expr)


State 13

   90 if_expr: TIF . expr block
   91        | TIF . expr block TELSE block
   92        | TIF . expr block TELSE if_expr

    TIDENTIFIER  shift, and go to state 65
    TINTEGER     shift, and go to state 3
    TDOUBLE      shift, and go to state 4
    TSTRING      shift, and go to state 5
    TCHAR        shift, and go to state 6
    TLPAREN      shift, and go to state 54
    TMINUS       shift, and go to state 9
    TTRUE        shift, and go to state 10
    TFALSE       shift, and go to state 11
    TVOID        shift, and go to state 12
    TIF          shift, and go to state 13
    TTHROW       shift, and go to state 14
    TFOR         shift, and go to state 15
    TWHILE       shift, and go to state 16
    TLBRACKET    shift, and go to state 17
    TEXCLAIM     shift, and go to state 18
    TTHIS        shift, and go to state 19
    TISEMPTY     shift, and go to state 22
    TGETVALUE    shift, and go to state 23
    TEMPTY       shift, and go to state 24
    TVALUE       shift, and go to state 25

    func_type_name  go to state 55
    expr            go to state 66
    expr_and        go to state 34
    expr_comp       go to state 35
    expr_math       go to state 36
    expr_var        go to state 37
    for_expr        go to state 38
    while_expr      go to state 39
    if_expr         go to state 40
    var             go to state 67
    var_right       go to state 42
    const           go to state 43
    array           go to state 45


State 14

   58 expr: TTHROW . TLPAREN expr TRPAREN

    TLPAREN  shift, and go to state 68


State 15

   88 for_expr: TFOR . TIDENTIFIER TLPAREN expr TTO expr TRPAREN block

    TIDENTIFIER  shift, and go to state 69


State 16

   89 while_expr: TWHILE . expr block

    TIDENTIFIER  shift, and go to state 65
    TINTEGER     shift, and go to state 3
    TDOUBLE      shift, and go to state 4
    TSTRING      shift, and go to state 5
    TCHAR        shift, and go to state 6
    TLPAREN      shift, and go to state 54
    TMINUS       shift, and go to state 9
    TTRUE        shift, and go to state 10
    TFALSE       shift, and go to state 11
    TVOID        shift, and go to state 12
    TIF          shift, and go to state 13
    TTHROW       shift, and go to state 14
    TFOR         shift, and go to state 15
    TWHILE       shift, and go to state 16
    TLBRACKET    shift, and go to state 17
    TEXCLAIM     shift, and go to state 18
    TTHIS        shift, and go to state 19
    TISEMPTY     shift, and go to state 22
    TGETVALUE    shift, and go to state 23
    TEMPTY       shift, and go to state 24
    TVALUE       shift, and go to state 25

    func_type_name  go to state 55
    expr            go to state 70
    expr_and        go to state 34
    expr_comp       go to state 35
    expr_math       go to state 36
    expr_var        go to state 37
    for_expr        go to state 38
    while_expr      go to state 39
    if_expr         go to state 40
    var             go to state 67
    var_right       go to state 42
    const           go to state 43
    array           go to state 45


State 17

  128 array: TLBRACKET . array_args TRBRACKET

    TIDENTIFIER  shift, and go to state 65
    TINTEGER     shift, and go to state 3
    TDOUBLE      shift, and go to state 4
    TSTRING      shift, and go to state 5
    TCHAR        shift, and go to state 6
    TLPAREN      shift, and go to state 54
    TMINUS       shift, and go to state 9
    TTRUE        shift, and go to state 10
    TFALSE       shift, and go to state 11
    TVOID        shift, and go to state 12
    TIF          shift, and go to state 13
    TTHROW       shift, and go to state 14
    TFOR         shift, and go to state 15
    TWHILE       shift, and go to state 16
    TLBRACKET    shift, and go to state 17
    TEXCLAIM     shift, and go to state 18
    TTHIS        shift, and go to state 19
    TISEMPTY     shift, and go to state 22
    TGETVALUE    shift, and go to state 23
    TEMPTY       shift, and go to state 24
    TVALUE       shift, and go to state 25

    func_type_name  go to state 55
    expr            go to state 71
    expr_and        go to state 34
    expr_comp       go to state 35
    expr_math       go to state 36
    expr_var        go to state 37
    for_expr        go to state 38
    while_expr      go to state 39
    if_expr         go to state 40
    var             go to state 67
    var_right       go to state 42
    const           go to state 43
    array           go to state 45
    array_args      go to state 72


State 18

   82 expr_math: TEXCLAIM . expr_var

    TIDENTIFIER  shift, and go to state 65
    TINTEGER     shift, and go to state 3
    TDOUBLE      shift, and go to state 4
    TSTRING      shift, and go to state 5
    TCHAR        shift, and go to state 6
    TLPAREN      shift, and go to state 54
    TMINUS       shift, and go to state 9
    TTRUE        shift, and go to state 10
    TFALSE       shift, and go to state 11
    TTHIS        shift, and go to state 19
    TISEMPTY     shift, and go to state 22
    TGETVALUE    shift, and go to state 23
    TEMPTY       shift, and go to state 24
    TVALUE       shift, and go to state 25

    func_type_name  go to state 55
    expr_var        go to state 73
    var             go to state 67
    var_right       go to state 42
    const           go to state 43


State 19

  101 var_right: TTHIS .

    $default  reduce using rule 101 (var_right)


State 20

   10 stmt: TINCLUDE . TSTRING

    TSTRING  shift, and go to state 74


State 21

   46 interface_decl: THASH . TIDENTIFIER temp_block_optional interface_block

    TIDENTIFIER  shift, and go to state 75


State 22

   97 var_right: TISEMPTY . TLPAREN expr TRPAREN

    TLPAREN  shift, and go to state 76


State 23

   98 var_right: TGETVALUE . TLPAREN expr TRPAREN

    TLPAREN  shift, and go to state 77


State 24

  110 const: TEMPTY . arg_type_quote

    TQUOTE  shift, and go to state 48

    arg_type_quote  go to state 78


State 25

   99 var_right: TVALUE . TLPAREN expr TRPAREN

    TLPAREN  shift, and go to state 79


State 26

    0 $accept: program . $end

    $end  shift, and go to state 80


State 27

    1 program: stmts .
    3 stmts: stmts . TEND stmt

    TEND  shift, and go to state 81

    $default  reduce using rule 1 (program)


State 28

    2 stmts: stmt .

    $default  reduce using rule 2 (stmts)


State 29

    5 stmt: var_decl .

    $default  reduce using rule 5 (stmt)


State 30

    6 stmt: func_decl .

    $default  reduce using rule 6 (stmt)


State 31

   23 func_decl: func_type_name . func_block block catch destroy
   24          | func_type_name . implement func_block block catch destroy
   25          | func_type_name . func_block return_type_quote block catch destroy
   26          | func_type_name . implement func_block return_type_quote block catch destroy
   96 var_right: func_type_name . func_block

    TLPAREN  shift, and go to state 82
    THASH    shift, and go to state 83

    func_block      go to state 84
    implement       go to state 85
    implement_args  go to state 86
    implement_arg   go to state 87


State 32

    7 stmt: interface_decl .

    $default  reduce using rule 7 (stmt)


State 33

    8 stmt: expr .

    $default  reduce using rule 8 (stmt)


State 34

   56 expr: expr_and .

    $default  reduce using rule 56 (expr)


State 35

   60 expr_and: expr_comp . TAND expr_and
   61         | expr_comp . TOR expr_and
   62         | expr_comp .

    TAND  shift, and go to state 88
    TOR   shift, and go to state 89

    $default  reduce using rule 62 (expr_and)


State 36

   67 expr_comp: expr_math . TCEQ expr_math
   68          | expr_math . TCNE expr_math
   69          | expr_math . TCPEQ expr_math
   70          | expr_math . TCPNE expr_math
   71          | expr_math . TCLT expr_math
   72          | expr_math . TCLE expr_math
   73          | expr_math . TCGT expr_math
   74          | expr_math . TCGE expr_math
   75          | expr_math .
   76 expr_math: expr_math . TPLUS expr_math
   77          | expr_math . TMINUS expr_math
   78          | expr_math . TMUL expr_math
   79          | expr_math . TDIV expr_math
   80          | expr_math . TMOD expr_math
   81          | expr_math . TQUESTIONCOLON expr_math

    TCEQ            shift, and go to state 90
    TCNE            shift, and go to state 91
    TCLT            shift, and go to state 92
    TCLE            shift, and go to state 93
    TCGT            shift, and go to state 94
    TCGE            shift, and go to state 95
    TPLUS           shift, and go to state 96
    TMINUS          shift, and go to state 97
    TMUL            shift, and go to state 98
    TDIV            shift, and go to state 99
    TMOD            shift, and go to state 100
    TCPEQ           shift, and go to state 101
    TCPNE           shift, and go to state 102
    TQUESTIONCOLON  shift, and go to state 103

    $default  reduce using rule 75 (expr_comp)


State 37

   83 expr_math: expr_var . TAS arg_type
   84          | expr_var .

    TAS  shift, and go to state 104

    $default  reduce using rule 84 (expr_math)


State 38

   54 expr: for_expr .

    $default  reduce using rule 54 (expr)


State 39

   55 expr: while_expr .

    $default  reduce using rule 55 (expr)


State 40

   53 expr: if_expr .

    $default  reduce using rule 53 (expr)


State 41

   15 var_decl: var . TPLUSPLUS
   16         | var . TMINUSMINUS
   17         | var . TPLUSEQUAL expr_and
   18         | var . TMINUSEQUAL expr_and
   19         | var . TMULEQUAL expr_and
   20         | var . TDIVEQUAL expr_and
   21         | var . TLBRACKET expr TRBRACKET
   22         | var . TLBRACKET expr TRBRACKET TEQUAL stmt
   86 expr_var: var .
   93 var: var . TDOT var_right
   94    | var . TQUESTIONDOT var_right
  114 assign: var . TDOT TIDENTIFIER assign_type stmt
  115       | var . TDOT TIDENTIFIER assign_type arg_type_quote
  116       | var . TDOT TIDENTIFIER arg_type_quote assign_type stmt

    TPLUSPLUS     shift, and go to state 105
    TMINUSMINUS   shift, and go to state 106
    TPLUSEQUAL    shift, and go to state 107
    TMINUSEQUAL   shift, and go to state 108
    TLBRACKET     shift, and go to state 109
    TDOT          shift, and go to state 110
    TMULEQUAL     shift, and go to state 111
    TDIVEQUAL     shift, and go to state 112
    TQUESTIONDOT  shift, and go to state 113

    $default  reduce using rule 86 (expr_var)


State 42

   95 var: var_right .

    $default  reduce using rule 95 (var)


State 43

   87 expr_var: const .

    $default  reduce using rule 87 (expr_var)


State 44

   14 var_decl: assign .

    $default  reduce using rule 14 (var_decl)


State 45

   57 expr: array .

    $default  reduce using rule 57 (expr)


State 46

  123 assign_type: TEQUAL .

    $default  reduce using rule 123 (assign_type)


State 47

  124 assign_type: TCOLON .

    $default  reduce using rule 124 (assign_type)


State 48

  132 arg_type_quote: TQUOTE . arg_type

    TIDENTIFIER  shift, and go to state 114
    TLPAREN      shift, and go to state 115
    THASH        shift, and go to state 116

    arg_type   go to state 117
    func_type  go to state 118


State 49

  152 temp_block: TEXCLAIM . arg_type
  153           | TEXCLAIM . TLBRACKET temp_args TRBRACKET

    TIDENTIFIER  shift, and go to state 114
    TLPAREN      shift, and go to state 115
    TLBRACKET    shift, and go to state 119
    THASH        shift, and go to state 116

    arg_type   go to state 120
    func_type  go to state 118


State 50

  111 assign: TIDENTIFIER assign_type . stmt
  112       | TIDENTIFIER assign_type . arg_type_quote

    error        shift, and go to state 1
    TIDENTIFIER  shift, and go to state 2
    TINTEGER     shift, and go to state 3
    TDOUBLE      shift, and go to state 4
    TSTRING      shift, and go to state 5
    TCHAR        shift, and go to state 6
    TCCODE       shift, and go to state 7
    TLPAREN      shift, and go to state 8
    TQUOTE       shift, and go to state 48
    TMINUS       shift, and go to state 9
    TTRUE        shift, and go to state 10
    TFALSE       shift, and go to state 11
    TVOID        shift, and go to state 12
    TIF          shift, and go to state 13
    TTHROW       shift, and go to state 14
    TFOR         shift, and go to state 15
    TWHILE       shift, and go to state 16
    TLBRACKET    shift, and go to state 17
    TEXCLAIM     shift, and go to state 18
    TTHIS        shift, and go to state 19
    TINCLUDE     shift, and go to state 20
    THASH        shift, and go to state 21
    TISEMPTY     shift, and go to state 22
    TGETVALUE    shift, and go to state 23
    TEMPTY       shift, and go to state 24
    TVALUE       shift, and go to state 25

    $end     reduce using rule 4 (stmt)
    TEND     reduce using rule 4 (stmt)
    TRPAREN  reduce using rule 4 (stmt)
    TRBRACE  reduce using rule 4 (stmt)
    TCOMMA   reduce using rule 4 (stmt)

    stmt            go to state 121
    var_decl        go to state 29
    func_decl       go to state 30
    func_type_name  go to state 31
    interface_decl  go to state 32
    expr            go to state 33
    expr_and        go to state 34
    expr_comp       go to state 35
    expr_math       go to state 36
    expr_var        go to state 37
    for_expr        go to state 38
    while_expr      go to state 39
    if_expr         go to state 40
    var             go to state 41
    var_right       go to state 42
    const           go to state 43
    assign          go to state 44
    array           go to state 45
    arg_type_quote  go to state 122


State 51

  113 assign: TIDENTIFIER arg_type_quote . assign_type stmt

    TEQUAL  shift, and go to state 46
    TCOLON  shift, and go to state 47

    assign_type  go to state 123


State 52

   28 func_type_name: TIDENTIFIER temp_block .

    $default  reduce using rule 28 (func_type_name)


State 53

   27 func_type_name: TIDENTIFIER .
   28               | TIDENTIFIER . temp_block
  100 var_right: TIDENTIFIER .
  120 assign_tuple_arg: TIDENTIFIER . assign_type
  121                 | TIDENTIFIER . assign_type arg_type_quote

    TEQUAL    shift, and go to state 46
    TCOLON    shift, and go to state 47
    TEXCLAIM  shift, and go to state 49

    TLPAREN   reduce using rule 27 (func_type_name)
    $default  reduce using rule 100 (var_right)

    assign_type  go to state 124
    temp_block   go to state 52


State 54

   85 expr_var: TLPAREN . expr_and_inner TRPAREN

    TIDENTIFIER  shift, and go to state 65
    TINTEGER     shift, and go to state 3
    TDOUBLE      shift, and go to state 4
    TSTRING      shift, and go to state 5
    TCHAR        shift, and go to state 6
    TLPAREN      shift, and go to state 54
    TMINUS       shift, and go to state 9
    TTRUE        shift, and go to state 10
    TFALSE       shift, and go to state 11
    TEXCLAIM     shift, and go to state 18
    TTHIS        shift, and go to state 19
    TISEMPTY     shift, and go to state 22
    TGETVALUE    shift, and go to state 23
    TEMPTY       shift, and go to state 24
    TVALUE       shift, and go to state 25

    func_type_name  go to state 55
    expr_and_inner  go to state 56
    expr_comp       go to state 57
    expr_math       go to state 36
    expr_var        go to state 37
    var             go to state 67
    var_right       go to state 42
    const           go to state 43
    tuple           go to state 61
    tuple_args      go to state 62


State 55

   96 var_right: func_type_name . func_block

    TLPAREN  shift, and go to state 82

    func_block  go to state 125


State 56

   85 expr_var: TLPAREN expr_and_inner . TRPAREN

    TRPAREN  shift, and go to state 126


State 57

   63 expr_and_inner: expr_comp . TAND expr_and
   64               | expr_comp . TOR expr_and
   66               | expr_comp .
  126 tuple_args: expr_comp .

    TAND  shift, and go to state 127
    TOR   shift, and go to state 128

    TCOMMA    reduce using rule 126 (tuple_args)
    $default  reduce using rule 66 (expr_and_inner)


State 58

   86 expr_var: var .
   93 var: var . TDOT var_right
   94    | var . TQUESTIONDOT var_right
  122 assign_tuple_arg: var . TDOT TIDENTIFIER assign_type

    TDOT          shift, and go to state 129
    TQUESTIONDOT  shift, and go to state 113

    $default  reduce using rule 86 (expr_var)


State 59

  117 assign: TLPAREN assign_tuple . TRPAREN expr_and
  119 assign_tuple: assign_tuple . TCOMMA assign_tuple_arg

    TRPAREN  shift, and go to state 130
    TCOMMA   shift, and go to state 131


State 60

  118 assign_tuple: assign_tuple_arg .

    $default  reduce using rule 118 (assign_tuple)


State 61

   65 expr_and_inner: tuple .

    $default  reduce using rule 65 (expr_and_inner)


State 62

  125 tuple: tuple_args . TCOMMA expr_comp
  127 tuple_args: tuple_args . TCOMMA expr_comp

    TCOMMA  shift, and go to state 132


State 63

  102 const: TMINUS TINTEGER .

    $default  reduce using rule 102 (const)


State 64

  104 const: TMINUS TDOUBLE .

    $default  reduce using rule 104 (const)


State 65

   27 func_type_name: TIDENTIFIER .
   28               | TIDENTIFIER . temp_block
  100 var_right: TIDENTIFIER .

    TEXCLAIM  shift, and go to state 49

    TLPAREN   reduce using rule 27 (func_type_name)
    $default  reduce using rule 100 (var_right)

    temp_block  go to state 52


State 66

   90 if_expr: TIF expr . block
   91        | TIF expr . block TELSE block
   92        | TIF expr . block TELSE if_expr

    TCCODE   shift, and go to state 133
    TLBRACE  shift, and go to state 134

    block  go to state 135


State 67

   86 expr_var: var .
   93 var: var . TDOT var_right
   94    | var . TQUESTIONDOT var_right

    TDOT          shift, and go to state 136
    TQUESTIONDOT  shift, and go to state 113

    $default  reduce using rule 86 (expr_var)


State 68

   58 expr: TTHROW TLPAREN . expr TRPAREN
